Update location from Uttar Pradesh to Karnataka, Bangalore across all sections

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arpita Singh | Tech Student & Web Designer Portfolio</title>
-    <meta name="description" content="Arpita Singh is a BE CSE student and aspiring frontend developer from Uttar Pradesh, India. Explore her portfolio showcasing web design projects and technical skills." />
+    <meta name="description" content="Arpita Singh is a BE CSE student and aspiring frontend developer from Karnataka, Bangalore. Explore her portfolio showcasing web design projects and technical skills." />
     <meta name="author" content="Arpita Singh" />
     <meta name="keywords" content="Arpita Singh, Frontend Developer, Web Designer, Portfolio, CSE Student, India" />
 
